[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynlcd"
version = "0.1.0"
authors = [
  { name="Saswata Nandi", email="iamsaswata@yahoo.com" },
]
description = "A Python package for downloading NLCD data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
  "python-dateutil >= 2.9.0",
  "requests >= 2.31.0",
  "pyproj >= 3.3",
  "scipy >= 1.13.0",
  "GDAL >= 3.7.0",
]


[project.urls]
"Homepage" = "https://github.com/iamsaswata/pynlcd"
"Bug Tracker" = "https://github.com/iamsaswata/pynlcd/issues"
Documentation = "https://pynlcd.readthedocs.io"